Addition of new theme

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,8 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin-top: 20px;
+    background-color: #141514;
+    color: #858796;
 }
 
 #myBoard {
@@ -22,7 +24,7 @@ body {
     border: 1px solid #ccc;
     padding: 10px;
     width: 200px;
-    background-color: #f9f9f9;
+    background-color: #141514;
 }
 
 .sidebar h3{
