--- a/templates/index.html
+++ b/templates/index.html
@@ -22,11 +22,12 @@
     <div class="container">
         <div id="myBoard"></div>
         <div id="sidebar" class="sidebar">
-            <h3>Puzzle Info</h3>
-            <p><strong>Turn to play:</strong> <span id="turn-info"></span></p>
-            <p><strong>Rating:</strong> <span id="rating-info"></span></p>
+            <p class="turnInfoP"><span id="turn-info"></span></p>
+            <p class="ratingInfoP"><span id="rating-info"></span></p>
             <p id="move-info"></p> 
-            <button id="newPuzzle">Load New Puzzle</button>
+            <button id="newPuzzle">Load new puzzle</button>
+            <button id="showNextMove">Show next move</button>
+            <button id="solvePuzzle">Solve puzzle</button>
         </div>
     </div>
 
