--- a/templates/random_puzzles.html
+++ b/templates/random_puzzles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Puzzle</title>
+    <title>Random Puzzles</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -40,15 +40,7 @@
                 <button class="button" id="solvePuzzle">Solve puzzle</button>
             </div>
 
-            <div class="ratingFilter">
-                <label for="minRating">Minimum Rating:</label>
-                <input type="number" id="minRating" name="minRating" placeholder="e.g., 400">
-
-                <label for="maxRating">Maximum Rating:</label>
-                <input type="number" id="maxRating" name="maxRating" placeholder="e.g., 3500">
-
-                <button id="loadRatedPuzzles">Load rated puzzles</button>
-            </div>
+            
 
             <div class="puzzle-counter">
                 Puzzles solved: <span id="puzzles-completed">0</span>
