--- a/templates/custom_puzzles.html
+++ b/templates/custom_puzzles.html
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
