--- a/templates/random_puzzles.html
+++ b/templates/random_puzzles.html
@@ -46,6 +46,6 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
