--- a/templates/daily_puzzle.html
+++ b/templates/daily_puzzle.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Puzzle</title>
+    <title>Daily Chess Puzzle</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
+        crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
+        integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.11.0/chess.min.js"></script>
 </head>
 <body>
-    <h1>Not ready yet</h1>
+    <h1>Daily Chess Puzzle</h1>
+    <div class="container">
+        <div id="myBoard"></div>
+        <div id="sidebar" class="sidebar">
+            <p class="turnInfoP"><span id="turn-info"></span></p>
+            <div class="info-container">
+                <p class="ratingInfoP"><span id="rating-info"></span></p>
+                <div class="timer-container">
+                    <i class="fas fa-clock clock-icon"></i>
+                    <p class="timerP"><span id="timer">00:00</span></p>
+                </div>
+            </div>
+            <p id="move-info"></p>
+            <p class="daily-message">A new puzzle is available every day at midnight!</p>
+
+            <div class="buttonGroup"> 
+                <button class="button" id="showNextMove">Show next move</button>
+                <button class="button" id="showMovingPiece">Hint piece</button>
+            </div>
+
+            <div class="puzzle-counter">
+                Puzzles solved: <span id="daily-puzzles-completed">0</span>
+            </div>
+        </div>
+    </div>
+
+    <script type="module" src="{{ url_for('static', filename='js/dailyPuzzle.js') }}"></script>
 </body>
 </html>
